# whatstranding

./: .env.copy  .gitignore  README.md  docker-compose.yaml  dockerfile  manage.py  pyproject.toml
posts/: models.py  serializers.py  views.py
posts/migrations/: 0001_initial.py
trendboard/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
trendboard/settings/: base.py  docker.py  local.py
trends/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
trends/migrations/: 0001_initial.py  0002_alter_trend_post.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_is_admin.py  0003_user_is_email_verified.py
